# learning-chroma

./: .envrc.sample  .gitignore  Makefile  README.md  getting-started.py  pyproject.toml  save_and_load.py
samples/: getting-started.py  openai_ef.py  query.py  review_100.py
