[tool.poetry]
name = "learning-chroma"
version = "0.1.0"
description = ""
authors = ["gomesuit <9404411+gomesuit@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "learning_chroma"}]

[tool.poetry.dependencies]
python = "^3.10"
chromadb = "^0.3.21"
openai = "^0.27.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
